[gd_scene load_steps=8 format=3 uid="uid://d1ppnlxxvgw4g"]

[ext_resource type="Script" uid="uid://dtninqbw4sjtj" path="res://scripts/hovering_script.gd" id="1_04qyp"]
[ext_resource type="Script" uid="uid://cvhiltir6gwqb" path="res://scripts/archangel_worm.gd" id="1_j7wrs"]
[ext_resource type="Texture2D" uid="uid://bdfioplu6to7u" path="res://assets/pixil-frame-0-5.png" id="2_04qyp"]
[ext_resource type="Texture2D" uid="uid://dydvgwigc53lo" path="res://assets/Worm-12-2.png" id="2_j7wrs"]
[ext_resource type="FontFile" uid="uid://bml3rksft123t" path="res://assets/Normal ComicS.ttf" id="3_j7wrs"]
[ext_resource type="FontFile" uid="uid://cqdbbvm45rjq4" path="res://assets/Fat ComicS.ttf" id="4_fws66"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hh0fu"]

[node name="Archangel Worm" type="Node2D"]
script = ExtResource("1_j7wrs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j7wrs")

[node name="archangel worm pixel art" type="Sprite2D" parent="."]
position = Vector2(366, 100)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_04qyp")
script = ExtResource("1_04qyp")

[node name="Buy Button" type="Button" parent="."]
offset_left = -486.0
offset_top = -251.0
offset_right = -333.0
offset_bottom = -154.0
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_hh0fu")
text = "BUY"

[node name="+1 COINS PER UPG" type="Label" parent="."]
offset_left = -484.0
offset_top = -145.0
offset_right = -341.0
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("3_j7wrs")
theme_override_font_sizes/font_size = 30
text = "+135 Coins
 Per UPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = -217.0
offset_top = -315.0
offset_right = 576.0
offset_bottom = -211.0
theme_override_fonts/font = ExtResource("3_j7wrs")
theme_override_font_sizes/font_size = 65
text = "Price: 50"
vertical_alignment = 1

[node name="Archangel Worm Count" type="Label" parent="."]
offset_left = -206.0
offset_top = 231.0
offset_right = 222.0
offset_bottom = 322.0
theme_override_fonts/font = ExtResource("4_fws66")
theme_override_font_sizes/font_size = 40
text = "Archangel Worms: 1"
vertical_alignment = 1

[connection signal="redraw_wormcost" from="." to="." method="_on_redraw_wormcost"]
[connection signal="show_archangel_worm" from="." to="." method="_on_show_archangel_worm"]
[connection signal="pressed" from="Buy Button" to="." method="_on_buy_button_pressed"]
